[project]
name = "pyclaw"
version = "2026.3.16"
description = "A mini version of the OpenClaw personal intelligent assistant implemented in Python."
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "pyclaw contributors"}
]
keywords = ["ai", "agent", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.9.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "websockets>=12.0",
    "websocket-client>=1.6.0",
    "httpx>=0.25.0",
    "loguru>=0.7.0",
    "readability-lxml>=0.8.0",
    "rich>=13.0.0",
    "croniter>=2.0.0",
    "python-telegram-bot>=21.0",
]

[project.optional-dependencies]
feishu = [
    "lark-oapi>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
pyclaw = "pyclaw.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyclaw"]

[tool.hatch.build.targets.wheel.sources]
"pyclaw" = "pyclaw"

# Include non-Python files in skills
[tool.hatch.build]
include = [
    "pyclaw/**/*.py",
    "pyclaw/skills/**/*.md",
    "pyclaw/skills/**/*.sh",
]

[tool.hatch.build.targets.sdist]
include = [
    "pyclaw/",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
